[FIX] project: allow portal user to add image in task description
To reproduce:
=============
- share a project with a portal user
- connect as the portal user
- on a task paste an image in the description
- save -> AccessError

Problem:
========
Portal user doesn't have the right to create attachments

Solution:
=========
- when saving the record, editor tries to save the image as an attachment
by `POST` request on the route `/web_editor/attachment/add_image`

- `/web_editor/attachment/add_image` is not dedicated to portal user,
so the save method is patched to modify the route to custom one
`/project_sharing/attachment/add_image`

opw-3774447

--- a/addons/project/i18n/project.pot
+++ b/addons/project/i18n/project.pot
@@ -2983,6 +2983,13 @@ msgid "Once a Month"
 msgstr ""
 
 #. module: project
+#. odoo-python
+#: code:addons/project/controllers/portal.py:0
+#, python-format
+msgid "Only images are allowed as attachments"
+msgstr ""
+
+#. module: project
 #. odoo-javascript
 #: code:addons/project/static/src/project_sharing/components/chatter/chatter_composer.xml:0
 #, python-format
@@ -3767,6 +3774,20 @@ msgstr ""
 #: code:addons/project/models/project_project.py:0
 #, python-format
 msgid "Satisfaction"
+msgstr ""
+
+#. module: project
+#. odoo-javascript
+#: code:addons/project/static/src/project_sharing/views/form/project_sharing_form_controller.js:0
+#, python-format
+msgid "Save the task to be able to paste images in description"
+msgstr ""
+
+#. module: project
+#. odoo-javascript
+#: code:addons/project/static/src/project_sharing/views/form/project_sharing_form_controller.js:0
+#, python-format
+msgid "Save the task to be able to drag images in Description"
 msgstr ""
 
 #. module: project
