--- a/addons/l10n_ar/i18n/l10n_ar.pot
+++ b/addons/l10n_ar/i18n/l10n_ar.pot
@@ -2217,7 +2217,7 @@ msgstr ""
 #. odoo-python
 #: code:addons/l10n_ar/models/account_journal.py:0
 msgid ""
-"You can not change the journal's configuration if it already has validated "
+"You can not change %s journal's configuration if it already has validated "
 "invoices"
 msgstr ""
 
