--- a/addons/l10n_uy/i18n/es_419.po
+++ b/addons/l10n_uy/i18n/es_419.po
@@ -6,8 +6,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Odoo Server 18.0+e\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2025-02-11 15:09+0000\n"
-"PO-Revision-Date: 2025-02-11 15:09+0000\n"
+"POT-Creation-Date: 2025-02-11 15:10+0000\n"
+"PO-Revision-Date: 2025-02-11 15:10+0000\n"
 "Last-Translator: \n"
 "Language-Team: \n"
 "MIME-Version: 1.0\n"
@@ -19,12 +19,12 @@ msgstr ""
 #. odoo-python
 #: code:addons/l10n_uy/models/res_partner.py:0
 msgid "3:402.010-2 or 93:402.010-1 (CI or NIE)"
-msgstr ""
+msgstr "3:402.010-2 o 93:402.010-1 (CI o NIE)"
 
 #. module: l10n_uy
 #: model:ir.model,name:l10n_uy.model_account_chart_template
 msgid "Account Chart Template"
-msgstr ""
+msgstr "Plantilla de plan contable"
 
 #. module: l10n_uy
 #: model:account.report.column,name:l10n_uy.tax_report_balance
@@ -34,32 +34,32 @@ msgstr ""
 #. module: l10n_uy
 #: model:account.report.line,name:l10n_uy.account_tax_report_base_impb_cmprs_0
 msgid "Base Purchases 0%"
-msgstr ""
+msgstr "Base 0% Compras"
 
 #. module: l10n_uy
 #: model:account.report.line,name:l10n_uy.account_tax_report_base_impb_cmprs_10
 msgid "Base Purchases 10%"
-msgstr ""
+msgstr "Base 10% Compras"
 
 #. module: l10n_uy
 #: model:account.report.line,name:l10n_uy.account_tax_report_base_impb_cmprs_22
 msgid "Base Purchases 22%"
-msgstr ""
+msgstr "Base 22% Compras"
 
 #. module: l10n_uy
 #: model:account.report.line,name:l10n_uy.account_tax_report_base_impb_vnts_0
 msgid "Base Sales 0%"
-msgstr ""
+msgstr "Base 0% Ventas"
 
 #. module: l10n_uy
 #: model:account.report.line,name:l10n_uy.account_tax_report_base_impb_vnts_10
 msgid "Base Sales 10%"
-msgstr ""
+msgstr "Base 10% Ventas"
 
 #. module: l10n_uy
 #: model:account.report.line,name:l10n_uy.account_tax_report_base_impb_vnts_22
 msgid "Base Sales 22%"
-msgstr ""
+msgstr "Base 22% Ventas"
 
 #. module: l10n_uy
 #: model:l10n_latam.document.type,name:l10n_uy.dc_boleta_venta_contado
@@ -80,143 +80,143 @@ msgstr ""
 #. module: l10n_uy
 #: model:l10n_latam.document.type,name:l10n_uy.dc_recibo_cobranza
 msgid "Collection Receipt"
-msgstr ""
+msgstr "Recibo Cobranza"
 
 #. module: l10n_uy
 #: model:ir.model,name:l10n_uy.model_res_company
 msgid "Companies"
-msgstr ""
+msgstr "Empresas"
 
 #. module: l10n_uy
 #: model:ir.model,name:l10n_uy.model_res_partner
 msgid "Contact"
-msgstr ""
+msgstr "Contacto"
 
 #. module: l10n_uy
 #: model:l10n_latam.document.type,name:l10n_uy.dc_e_remito_de_exportación_contingencia
 msgid "Contingency Export e-Delivery Guide"
-msgstr ""
+msgstr "e-Remito de Exportación Contingencia"
 
 #. module: l10n_uy
 #: model:l10n_latam.document.type,name:l10n_uy.dc_e_factura_exportación_contingencia
 msgid "Contingency Export e-Invoice"
-msgstr ""
+msgstr "e-Factura Exportación Contingencia"
 
 #. module: l10n_uy
 #: model:l10n_latam.document.type,name:l10n_uy.dc_nota_de_crédito_de_e_factura_exportación_contingencia
 msgid "Contingency Export e-Invoice Credit Note"
-msgstr ""
+msgstr "Nota de Crédito de e-Factura Exportación Contingencia"
 
 #. module: l10n_uy
 #: model:l10n_latam.document.type,name:l10n_uy.dc_nota_de_débito_de_e_factura_exportación_contingencia
 msgid "Contingency Export e-Invoice Debit Note"
-msgstr ""
+msgstr "Nota de Débito de e-Factura Exportación Contingencia"
 
 #. module: l10n_uy
 #: model:l10n_latam.document.type,name:l10n_uy.dc_e_boleta_contingencia
 msgid "Contingency e-Boleta"
-msgstr ""
+msgstr "e-Boleta Contingencia"
 
 #. module: l10n_uy
 #: model:l10n_latam.document.type,name:l10n_uy.dc_nota_de_credito_e_boleta_contingencia
 msgid "Contingency e-Boleta Credit Note"
-msgstr ""
+msgstr "Nota de Crédito e-Boleta Contingencia"
 
 #. module: l10n_uy
 #: model:l10n_latam.document.type,name:l10n_uy.dc_nota_de_debito_e_boleta_contingencia
 msgid "Contingency e-Boleta Debit Note"
-msgstr ""
+msgstr "Nota de Débito e-Boleta Contingencia"
 
 #. module: l10n_uy
 #: model:l10n_latam.document.type,name:l10n_uy.dc_e_remito_contingencia
 msgid "Contingency e-Delivery Guide"
-msgstr ""
+msgstr "e-Remito Contingencia"
 
 #. module: l10n_uy
 #: model:l10n_latam.document.type,name:l10n_uy.dc_e_factura_contingencia
 msgid "Contingency e-Invoice"
-msgstr ""
+msgstr "e-Factura Contingencia"
 
 #. module: l10n_uy
 #: model:l10n_latam.document.type,name:l10n_uy.dc_nota_de_crédito_de_e_factura_contingencia
 msgid "Contingency e-Invoice Credit Note"
-msgstr ""
+msgstr "Nota de Crédito de e-Factura Contingencia"
 
 #. module: l10n_uy
 #: model:l10n_latam.document.type,name:l10n_uy.dc_nota_de_débito_de_e_factura_contingencia
 msgid "Contingency e-Invoice Debit Note"
-msgstr ""
+msgstr "Nota de Débito de e-Factura Contingencia"
 
 #. module: l10n_uy
 #: model:l10n_latam.document.type,name:l10n_uy.dc_e_factura_venta_por_cuenta_ajena_contingencia
 msgid "Contingency e-Invoice Sale By Third Party"
-msgstr ""
+msgstr "e-Factura Venta por Cuenta Ajena Contingencia"
 
 #. module: l10n_uy
 #: model:l10n_latam.document.type,name:l10n_uy.dc_nota_de_crédito_de_e_factura_venta_por_cuenta_ajena_contingencia
 msgid "Contingency e-Invoice Sale By Third Party Credit Note"
-msgstr ""
+msgstr "Nota de Crédito de e-Factura Venta por Cuenta Ajena Contingencia"
 
 #. module: l10n_uy
 #: model:l10n_latam.document.type,name:l10n_uy.dc_nota_de_débito_de_e_factura_venta_por_cuenta_ajena_contingencia
 msgid "Contingency e-Invoice Sale By Third Party Debit Note"
-msgstr ""
+msgstr "Nota de Débito de e-Factura Venta por Cuenta Ajena Contingencia"
 
 #. module: l10n_uy
 #: model:l10n_latam.document.type,name:l10n_uy.dc_e_resguardo_contingencia
 msgid "Contingency e-Resguardo"
-msgstr ""
+msgstr "e-Resguardo Contingencia"
 
 #. module: l10n_uy
 #: model:l10n_latam.document.type,name:l10n_uy.dc_e_ticket_cont
 msgid "Contingency e-Ticket"
-msgstr ""
+msgstr "e-Ticket Contingencia"
 
 #. module: l10n_uy
 #: model:l10n_latam.document.type,name:l10n_uy.dc_cn_e_ticket_cont
 msgid "Contingency e-Ticket Credit Note"
-msgstr ""
+msgstr "Nota de Credito de e-Ticket Contingencia"
 
 #. module: l10n_uy
 #: model:l10n_latam.document.type,name:l10n_uy.dc_dn_e_ticket_cont
 msgid "Contingency e-Ticket Debit Note"
-msgstr ""
+msgstr "Nota de Debito de e-Ticket Contingencia"
 
 #. module: l10n_uy
 #: model:l10n_latam.document.type,name:l10n_uy.dc_e_ticket_venta_por_cuenta_ajena_contingencia
 msgid "Contingency e-Ticket Sale By Third Party"
-msgstr ""
+msgstr "e-Ticket Venta por Cuenta Ajena Contingencia"
 
 #. module: l10n_uy
 #: model:l10n_latam.document.type,name:l10n_uy.dc_nota_de_crédito_de_e_ticket_venta_por_cuenta_ajena_contingencia
 msgid "Contingency e-Ticket Sale By Third Party Credit Note"
-msgstr ""
+msgstr "Nota de Crédito de e-Ticket Venta por Cuenta Ajena Contingencia"
 
 #. module: l10n_uy
 #: model:l10n_latam.document.type,name:l10n_uy.dc_nota_de_débito_de_e_ticket_venta_por_cuenta_ajena_contingencia
 msgid "Contingency e-Ticket Sale By Third Party Debit Note"
-msgstr ""
+msgstr "Nota de Débito de e-Ticket Venta por Cuenta Ajena Contingencia"
 
 #. module: l10n_uy
 #: model:l10n_latam.document.type,name:l10n_uy.dc_cn_inv
 msgid "Credit Note"
-msgstr ""
+msgstr "Nota de Crédito"
 
 #. module: l10n_uy
 #: model:l10n_latam.document.type,name:l10n_uy.dc_nota_de_credito_e_boleta
 msgid "Credit Note e-Boleta"
-msgstr ""
+msgstr "Nota de Crédito e-Boleta"
 
 #. module: l10n_uy
 #. odoo-python
 #: code:addons/l10n_uy/models/template_uy.py:0
 msgid "Customer Invoices"
-msgstr ""
+msgstr "Facturas de Clientes"
 
 #. module: l10n_uy
 #: model:ir.model.fields,field_description:l10n_uy.field_l10n_latam_identification_type__l10n_uy_dgi_code
 msgid "DGI Code"
-msgstr ""
+msgstr "Código DGI"
 
 #. module: l10n_uy
 #: model:l10n_latam.identification.type,name:l10n_uy.it_dni
@@ -226,87 +226,87 @@ msgstr ""
 #. module: l10n_uy
 #: model:l10n_latam.document.type,name:l10n_uy.dc_dn_inv
 msgid "Debit Note"
-msgstr ""
+msgstr "Nota de Débito"
 
 #. module: l10n_uy
 #: model:l10n_latam.document.type,name:l10n_uy.dc_nota_de_debito_e_boleta
 msgid "Debit Note e-Boleta"
-msgstr ""
+msgstr "Nota de Débito e-Boleta"
 
 #. module: l10n_uy
 #: model:l10n_latam.document.type,name:l10n_uy.dc_remito
 msgid "Delivery Guide"
-msgstr ""
+msgstr "Remito"
 
 #. module: l10n_uy
 #: model:l10n_latam.document.type,name:l10n_uy.dc_nc_expo
 msgid "Export Credit Note"
-msgstr ""
+msgstr "Nota de Crédito Exportación"
 
 #. module: l10n_uy
 #: model:l10n_latam.document.type,name:l10n_uy.dc_nd_expo
 msgid "Export Debit Note"
-msgstr ""
+msgstr "Nota de Débito Exportación"
 
 #. module: l10n_uy
 #: model:l10n_latam.document.type,name:l10n_uy.dc_inv_expo
 msgid "Export Invoice"
-msgstr ""
+msgstr "Factura Exportación"
 
 #. module: l10n_uy
 #: model:l10n_latam.document.type,name:l10n_uy.dc_e_remito_expo
 msgid "Export e-Delivery Guide"
-msgstr ""
+msgstr "e-Remito Exportación"
 
 #. module: l10n_uy
 #: model:l10n_latam.document.type,name:l10n_uy.dc_e_inv_exp
 msgid "Export e-Invoice"
-msgstr ""
+msgstr "e-Factura Exportación"
 
 #. module: l10n_uy
 #: model:l10n_latam.document.type,name:l10n_uy.dc_cn_e_inv_exp
 msgid "Export e-Invoice Credit Note"
-msgstr ""
+msgstr "Nota de Crédito de e-Factura Exportación"
 
 #. module: l10n_uy
 #: model:l10n_latam.document.type,name:l10n_uy.dc_dn_e_inv_exp
 msgid "Export e-Invoice Debit Note"
-msgstr ""
+msgstr "Nota de Débito de e-Factura Exportación"
 
 #. module: l10n_uy
 #: model:l10n_latam.identification.type,description:l10n_uy.it_nife
 msgid "Foreign tax identification number"
-msgstr ""
+msgstr "Número de identificación fiscal extranjero"
 
 #. module: l10n_uy
 #: model:l10n_latam.identification.type,description:l10n_uy.it_nie
 msgid "Foreigner Identity Number"
-msgstr ""
+msgstr "Número de Identidad de Extranjero"
 
 #. module: l10n_uy
 #: model:l10n_latam.identification.type,description:l10n_uy.it_ci
 msgid "Identification Card"
-msgstr ""
+msgstr "Cédula de Identidad"
 
 #. module: l10n_uy
 #: model:ir.model,name:l10n_uy.model_l10n_latam_identification_type
 msgid "Identification Types"
-msgstr ""
+msgstr "Tipos de identificación"
 
 #. module: l10n_uy
 #: model:l10n_latam.document.type,name:l10n_uy.dc_inv
 msgid "Invoice"
-msgstr ""
+msgstr "Factura"
 
 #. module: l10n_uy
 #: model:ir.model,name:l10n_uy.model_account_move
 msgid "Journal Entry"
-msgstr ""
+msgstr "Asiento contable"
 
 #. module: l10n_uy
 #: model:ir.model,name:l10n_uy.model_l10n_latam_document_type
 msgid "Latam Document Type"
-msgstr ""
+msgstr "Tipo de Documento Latam"
 
 #. module: l10n_uy
 #: model:l10n_latam.identification.type,name:l10n_uy.it_nie
@@ -321,7 +321,7 @@ msgstr ""
 #. module: l10n_uy
 #: model:l10n_latam.identification.type,description:l10n_uy.it_dni
 msgid "National identity document of Argentina, Brazil, Chile or Paraguay"
-msgstr ""
+msgstr "Documento Nacional de identidad de Argentina, Brasil, Chile o Paraguay"
 
 #. module: l10n_uy
 #: model:l10n_latam.identification.type,name:l10n_uy.it_other
@@ -331,7 +331,7 @@ msgstr ""
 #. module: l10n_uy
 #: model:l10n_latam.identification.type,description:l10n_uy.it_other
 msgid "Others"
-msgstr ""
+msgstr "Otros"
 
 #. module: l10n_uy
 #: model:l10n_latam.identification.type,name:l10n_uy.it_pass
@@ -341,7 +341,7 @@ msgstr ""
 #. module: l10n_uy
 #: model:l10n_latam.identification.type,description:l10n_uy.it_pass
 msgid "Passport (all countries)"
-msgstr ""
+msgstr "Pasaporte (todos los paises)"
 
 #. module: l10n_uy
 #. odoo-python
@@ -349,11 +349,13 @@ msgstr ""
 msgid ""
 "Please introduce a valid Document number: 2 letters and 7 digits (XX0000001)"
 msgstr ""
+"Por favor ingrese un Número de documento válido: 2 letras y 7 dígitos "
+"(XX0000001)"
 
 #. module: l10n_uy
 #: model:account.report.line,name:l10n_uy.account_tax_report_cmprs_exnto_iva
 msgid "Purchases Exempt from VAT"
-msgstr ""
+msgstr "Compras IVA Exentas"
 
 #. module: l10n_uy
 #: model:l10n_latam.identification.type,name:l10n_uy.it_rut
@@ -363,49 +365,49 @@ msgstr ""
 #. module: l10n_uy
 #: model:account.report.line,name:l10n_uy.account_tax_report_iva_vnts_10
 msgid "Sales VAT 10%"
-msgstr ""
+msgstr "IVA Ventas 10%"
 
 #. module: l10n_uy
 #: model:account.report.line,name:l10n_uy.account_tax_report_iva_vnts_22
 msgid "Sales VAT 22%"
-msgstr ""
+msgstr "IVA Ventas 22%"
 
 #. module: l10n_uy
 #: model:account.report.line,name:l10n_uy.account_tax_report_vnts_iva
 msgid "Sales VAT exempt"
-msgstr ""
+msgstr "Ventas exentas de IVA"
 
 #. module: l10n_uy
 #: model:ir.model,name:l10n_uy.model_account_tax
 msgid "Tax"
-msgstr ""
+msgstr "Impuestos"
 
 #. module: l10n_uy
 #: model:account.report.line,name:l10n_uy.account_tax_report_base_impb_cmprs
 #: model:account.report.line,name:l10n_uy.account_tax_report_impb_cmprs
 msgid "Tax Base Purchases"
-msgstr ""
+msgstr "Compras de base imponible"
 
 #. module: l10n_uy
 #: model:ir.model.fields,field_description:l10n_uy.field_account_tax__l10n_uy_tax_category
 msgid "Tax Category"
-msgstr ""
+msgstr "Categoría de Impuesto"
 
 #. module: l10n_uy
 #: model:account.report,name:l10n_uy.tax_report
 msgid "Tax Report"
-msgstr ""
+msgstr "Reporte de Impuestos"
 
 #. module: l10n_uy
 #: model:account.report.line,name:l10n_uy.account_tax_report_base_impb_vnts
 #: model:account.report.line,name:l10n_uy.account_tax_report_impb_vnts
 msgid "Taxable Sales Base"
-msgstr ""
+msgstr "Base imponible de ventas"
 
 #. module: l10n_uy
 #: model:account.report.line,name:l10n_uy.account_tax_report_base_impb
 msgid "Taxable income"
-msgstr ""
+msgstr "Ingreso Imponible"
 
 #. module: l10n_uy
 #. odoo-python
@@ -414,6 +416,8 @@ msgid ""
 "The %(vat_label)s number [%(wrong_vat)s] does not seem to be valid.\n"
 "Note: the expected format is %(expected_format)s"
 msgstr ""
+"El %(vat_label)s número [%(wrong_vat)s] no parece válido.\n"
+"Nota: el formato esperoado es %(expected_format)s"
 
 #. module: l10n_uy
 #. odoo-python
@@ -422,61 +426,65 @@ msgid ""
 "The %(vat_label)s number [%(wrong_vat)s] for %(partner_label)s does not seem to be valid.\n"
 "Note: the expected format is %(expected_format)s"
 msgstr ""
+"El %(vat_label)s número [%(wrong_vat)s] para %(partner_label)s no parece válido.\n"
+"Nota: el formato esperoado es %(expected_format)s"
 
 #. module: l10n_uy
 #: model:ir.model.fields,help:l10n_uy.field_account_tax__l10n_uy_tax_category
 msgid ""
 "UY: Use to group the transactions in the Financial Reports required by DGI"
 msgstr ""
+"UY: Utilizado para agrupar transacciones en Reportes Financieros requeridos "
+"por DGI"
 
 #. module: l10n_uy
 #: model:l10n_latam.identification.type,description:l10n_uy.it_rut
 msgid "Unique Tax Registry / Unique Taxpayer Registry"
-msgstr ""
+msgstr "Registro Único Tributario / Registro Único de Contribuyente"
 
 #. module: l10n_uy
 #. odoo-python
 #: code:addons/l10n_uy/models/template_uy.py:0
 msgid "Uruguayan Generic Chart of Accounts"
-msgstr ""
+msgstr "Plan Contable Genérico Uruguayo"
 
 #. module: l10n_uy
 #: model:ir.model.fields.selection,name:l10n_uy.selection__account_tax__l10n_uy_tax_category__vat
 msgid "VAT"
-msgstr ""
+msgstr "IVA"
 
 #. module: l10n_uy
 #: model:account.report.line,name:l10n_uy.account_tax_report_cmprs_pagdo
 #: model:account.report.line,name:l10n_uy.account_tax_report_iva_cmprs_pagdo
 msgid "VAT Purchases - paid"
-msgstr ""
+msgstr "IVA Compras - pagado"
 
 #. module: l10n_uy
 #: model:account.report.line,name:l10n_uy.account_tax_report_iva_cmprs_10
 msgid "VAT Purchases 10%"
-msgstr ""
+msgstr "IVA Compras 10%"
 
 #. module: l10n_uy
 #: model:account.report.line,name:l10n_uy.account_tax_report_iva_cmprs_22
 msgid "VAT Purchases 22%"
-msgstr ""
+msgstr "IVA Compras 22%"
 
 #. module: l10n_uy
 #: model:account.report.line,name:l10n_uy.account_tax_report_iva_vnts_prcbdo
 #: model:account.report.line,name:l10n_uy.account_tax_report_vnts_prcbdo
 msgid "VAT Sales - received"
-msgstr ""
+msgstr "IVA Venas - recibido"
 
 #. module: l10n_uy
 #: model:account.report.line,name:l10n_uy.account_tax_report_sldo_iva
 msgid "VAT balance"
-msgstr ""
+msgstr "Balance IVA"
 
 #. module: l10n_uy
 #. odoo-python
 #: code:addons/l10n_uy/models/template_uy.py:0
 msgid "Vendor Bills"
-msgstr ""
+msgstr "Facturas de Proveedor"
 
 #. module: l10n_uy
 #: model:l10n_latam.document.type,name:l10n_uy.dc_e_boleta
@@ -486,37 +494,37 @@ msgstr ""
 #. module: l10n_uy
 #: model:l10n_latam.document.type,name:l10n_uy.dc_e_remito
 msgid "e-Delivery Guide"
-msgstr ""
+msgstr "e-Remito"
 
 #. module: l10n_uy
 #: model:l10n_latam.document.type,name:l10n_uy.dc_e_inv
 msgid "e-Invoice"
-msgstr ""
+msgstr "e-Factura"
 
 #. module: l10n_uy
 #: model:l10n_latam.document.type,name:l10n_uy.dc_cn_e_inv
 msgid "e-Invoice Credit Note"
-msgstr ""
+msgstr "Nota de Crédito de e-Factura"
 
 #. module: l10n_uy
 #: model:l10n_latam.document.type,name:l10n_uy.dc_dn_e_inv
 msgid "e-Invoice Debit Note"
-msgstr ""
+msgstr "Nota de Débito de e-Factura"
 
 #. module: l10n_uy
 #: model:l10n_latam.document.type,name:l10n_uy.dc_e_factura_venta_por_cuenta_ajena
 msgid "e-Invoice Sale By Third Party"
-msgstr ""
+msgstr "e-Factura Venta por Cuenta Ajena"
 
 #. module: l10n_uy
 #: model:l10n_latam.document.type,name:l10n_uy.dc_nota_de_credito_e_factura_venta_por_cuenta_ajena
 msgid "e-Invoice Sale By Third Party Credit Note"
-msgstr ""
+msgstr "Nota de Crédito e-Factura Venta por Cuenta Ajena"
 
 #. module: l10n_uy
 #: model:l10n_latam.document.type,name:l10n_uy.dc_nota_de_debito_e_factura_venta_por_cuenta_ajena
 msgid "e-Invoice Sale By Third Party Debit Note"
-msgstr ""
+msgstr "Nota de Débito e-Factura Venta por Cuenta Ajena"
 
 #. module: l10n_uy
 #: model:l10n_latam.document.type,name:l10n_uy.dc_e_resguardo
@@ -531,30 +539,30 @@ msgstr ""
 #. module: l10n_uy
 #: model:l10n_latam.document.type,name:l10n_uy.dc_cn_e_ticket
 msgid "e-Ticket Credit Note"
-msgstr ""
+msgstr "Nota de Crédito de e-Ticket"
 
 #. module: l10n_uy
 #: model:l10n_latam.document.type,name:l10n_uy.dc_dn_e_ticket
 msgid "e-Ticket Debit Note"
-msgstr ""
+msgstr "Nota de Débito de e-Ticket"
 
 #. module: l10n_uy
 #: model:l10n_latam.document.type,name:l10n_uy.dc_e_ticket_venta_por_cuenta_ajena
 msgid "e-Ticket Sale By Third Party"
-msgstr ""
+msgstr "e-Ticket Venta por Cuenta Ajena"
 
 #. module: l10n_uy
 #: model:l10n_latam.document.type,name:l10n_uy.dc_nota_de_credito_e_ticket_venta_por_cuenta_ajena
 msgid "e-Ticket Sale By Third Party Credit Note"
-msgstr ""
+msgstr "Nota de Crédito e-Ticket Venta por Cuenta Ajena"
 
 #. module: l10n_uy
 #: model:l10n_latam.document.type,name:l10n_uy.dc_nota_de_debito_e_ticket_venta_por_cuenta_ajena
 msgid "e-Ticket Sale By Third Party Debit Note"
-msgstr ""
+msgstr "Nota de Débito e-Ticket Venta por Cuenta Ajena"
 
 #. module: l10n_uy
 #. odoo-python
 #: code:addons/l10n_uy/models/res_partner.py:0
 msgid "partner [%s]"
-msgstr ""
+msgstr "empresa [%s]"
